[package]
name = "how-do-i-escape"
version = "0.3.0"
license = "MIT"
description = "Prints escape sequences for unicode graphemes"
authors = ["Philip Jackson <p-jackson@live.com>"]
homepage = "https://github.com/p-jackson/how-do-i-escape"
repository = "https://github.com/p-jackson/how-do-i-escape"
readme = "README.md"
keywords = ["escape", "escaping", "unicode", "grapheme", "character"]

[dependencies]
ansi_term = "0.9.0"
clap = { version = "2.19.2", default-features = false }
entities = "1.0.0"
