[package]
name = "how_do_i_escape_web_crate"
version = "0.1.0"
license = "MIT"
description = "WASM crate used to prints escape sequences in web app."
authors = ["Philip Jackson <p-jackson@live.com>"]
homepage = "https://github.com/p-jackson/how-do-i-escape"
repository = "https://github.com/p-jackson/how-do-i-escape"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "0.1.5"
wasm-bindgen = "0.2.25"
escape_grapheme = { path = "../../escape_grapheme" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.5", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.2", optional = true }

[features]
default-features = ["console_error_panic_hook"]
